Make repositories in FilterOptions repeated
